# megos

./: CMakeLists.txt  Makefile  README.md  linker.ld  megos.img
boot/: boot.asm  cpuid.asm  gdt.asm  loader.asm  readdisk.asm  simplepaging.asm
inc/: cpuid.asm  gdt.asm  print.asm  simplepaging.asm
projects/: CMakeLists.txt
projects/boot/: CMakeLists.txt  boot.asm
projects/loader/: CMakeLists.txt  loader.asm
src/: loader.asm
